# jp2k

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs
examples/: decode.rs
openjpeg-sys/: Cargo.toml  build.rs
src/: decode.rs  err.rs  error.rs  ffi.ref.rs  ffi.rs  lib.rs
src/decode/: color_convert.rs  mod.rs
